--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homapage": "homepage": "http://hazigabriel.github.io/memory-game",
+  "homapage": "https://hazigabriel.github.io/memory-game",
   "name": "memory-card-game",
   "version": "0.1.0",
   "private": true,
@@ -18,8 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-    
+    "eject": "react-scripts eject"   
   },
   "eslintConfig": {
     "extends": [
