--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homapage": "https://hazigabriel.github.io/memory-game",
+  "homapage": "https://hazigabriel.github.io/memory-game/",
   "name": "memory-card-game",
   "version": "0.1.0",
   "private": true,
@@ -13,12 +13,12 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"   
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
