--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homapage": "https://hazigabriel.github.io/memory-game/",
+  "homepage": "https://hazigabriel.github.io/memory-game/",
   "name": "memory-card-game",
   "version": "0.1.0",
   "private": true,
